<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/light_blue"
        android:padding="20dp"
        android:text="@string/setting"
        android:textSize="16sp" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_home"
        app:switch_visibility="false"
        app:text="@string/home" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_location"
        app:switch_visibility="false"
        app:text="@string/location" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_temp"
        app:switch_visibility="false"
        app:text="@string/temperature" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/lock_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_lock"
        app:switch_visibility="true"
        app:text="@string/lock_screen" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_notification"
        app:switch_visibility="true"
        app:text="@string/notification" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/status_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_status"
        app:switch_visibility="true"
        app:text="@string/status_bar" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/hide_back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_hide_image"
        app:switch_visibility="true"
        app:text="@string/hide_background_image" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/weather_radar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_radar"
        app:switch_visibility="false"
        app:text="@string/weather_radar" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/weather_widgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_widgets"
        app:switch_visibility="false"
        app:text="@string/weather_widget" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_settings"
        app:switch_visibility="false"
        app:text="@string/setting" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/feed_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_message"
        app:switch_visibility="false"
        app:text="@string/feedback_suggestion" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/report_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_message"
        app:switch_visibility="false"
        app:text="@string/report_problem" />

    <com.animan.weatherapp.ItemMenuWidget
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img_icon="@drawable/ic_share"
        app:switch_visibility="false"
        app:text="@string/share" />

</androidx.appcompat.widget.LinearLayoutCompat>